finished map search, added detail view of the library

--- a/libraries/templates/add_library.html
+++ b/libraries/templates/add_library.html
@@ -68,16 +68,20 @@
                             <!-- Row -->
                             <div class="row with-forms">
                                 <!-- Phone -->
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5>{{ form.phone|as_crispy_field }}</h5>
                                 </div>
                                 <!-- Fax -->
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5>{{ form.fax|as_crispy_field }}</h5>
                                 </div>
                                 <!-- Website -->
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <h5>{{ form.website|as_crispy_field }}</h5>
+                                </div>
+                                <!-- Email -->
+                                <div class="col-md-3">
+                                    <h5>{{ form.email|as_crispy_field }}</h5>
                                 </div>
                             </div>
                             <!-- Row / End -->
