--- a/libraries/templates/base.html
+++ b/libraries/templates/base.html
@@ -2,19 +2,20 @@
 <!DOCTYPE html>
 <head>
 
-<!-- Basic Page Needs
-================================================== -->
-<title>List of Libraries</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Basic Page Needs
+    ================================================== -->
+    <title>List of Libraries</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<!-- CSS
-================================================== -->
-<link rel="stylesheet" href='{% static "css/libraries_list.css" %}' />
-<link rel="stylesheet" href="{% static "css/style.css" %}">
-<link rel="stylesheet" href="{% static "css/main-color.css" %}" id="colors">
-{% block head %}
-{% endblock %}
+    <!-- CSS
+    ================================================== -->
+    <link rel="stylesheet" href='{% static "css/libraries_list.css" %}'/>
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static "css/main-color.css" %}" id="colors">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/toastr.css' %}" media="all">
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body>
@@ -22,104 +23,44 @@
 <!-- Wrapper -->
 <div id="wrapper">
 
-<!-- Header Container
-================================================== -->
-<header id="header-container" class="fixed fullwidth">
+    <!-- Header Container
+    ================================================== -->
+    {% include 'includes/header.html' %}
+    <!-- Header Container / End -->
 
-	<!-- Header -->
-	<div id="header" class="not-sticky">
-		<div class="container">
+    {% block content %}
+    {% endblock %}
 
-			<!-- Left Side Content -->
-			<div class="left-side">
-
-				<!-- Logo -->
-				<div id="logo">
-                    <a href="#"><img src="{% static "images/logo.png" %}" alt=""></a>
-				</div>
-
-				<!-- Mobile Navigation -->
-				<div class="mmenu-trigger">
-					<button class="hamburger hamburger--collapse" type="button">
-						<span class="hamburger-box">
-							<span class="hamburger-inner"></span>
-						</span>
-					</button>
-				</div>
-
-				<!-- Main Navigation -->
-				<nav id="navigation" class="style-1">
-					<ul id="responsive">
-						<li><a href="#">Home</a></li>
-						<li><a class="current" href="{% url 'libraries_list' %}">List of Libraries</a></li>
-					</ul>
-				</nav>
-				<div class="clearfix"></div>
-				<!-- Main Navigation / End -->
-			</div>
-			<!-- Left Side Content / End -->
-			<!-- Right Side Content / End -->
-			<div class="right-side">
-				<div class="header-widget">
-					<a href="#sign-in-dialog" class="sign-in popup-with-zoom-anim">Sign In</a>
-                    {% block side_content %}
-                    {% endblock %}
-                </div>
-			</div>
-			<!-- Right Side Content / End -->
-			<!-- Sign In Popup -->
-			<div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide">
-				<div class="small-dialog-header">
-					<h3>Sign In</h3>
-				</div>
-				<!--Tabs -->
-				<div class="sign-in-form style-1">
-					<ul class="tabs-nav">
-						<li class=""><a href="#tab1">Log In</a></li>
-						<li><a href="#tab2">Register</a></li>
-					</ul>
-					<div class="tabs-container alt">
-						<!-- Login -->
-						<div class="tab-content" id="tab1" style="display: none;">
-						</div>
-
-						<!-- Register -->
-						<div class="tab-content" id="tab2" style="display: none;">
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- Sign In Popup / End -->
-		</div>
-	</div>
-	<!-- Header / End -->
-</header>
-<div class="clearfix"></div>
-<!-- Header Container / End -->
-
-{% block content %}
-{% endblock %}
-
-<!-- Scripts
-================================================== -->
-<script type="text/javascript" src="{% static "scripts/jquery-3.4.1.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/jquery-migrate-3.1.0.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/mmenu.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/chosen.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/slick.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/rangeslider.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/magnific-popup.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/waypoints.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/counterup.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/jquery-ui.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/tooltips.min.js" %}"></script>
-<script type="text/javascript" src="{% static "scripts/custom.js" %}"></script>
-
-<!-- Maps -->
-{#<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaoOT9ioUE4SA8h-anaFyU4K63a7H-7bc&libraries=places&callback=initAutocomplete"></script>#}
-{#<script type="text/javascript" src="scripts/infobox.min.js"></script>#}
-{#<script type="text/javascript" src="scripts/markerclusterer.js"></script>#}
-{#<script type="text/javascript" src="scripts/maps.js"></script>#}
-
+    <!-- Scripts
+    ================================================== -->
+    <script type="text/javascript" src="{% static "scripts/jquery-3.4.1.min.js" %}"></script>
+    <script type="text/javascript" src="{% static 'scripts/toastr.min.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            toastr.options.closeButton = true;
+            toastr.options.positionClass = "toast-bottom-right";
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'success' %}
+                        toastr.{{ message.tags }}('{{ message }}');
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        });
+    </script>
+    <script type="text/javascript" src="{% static "scripts/jquery-migrate-3.1.0.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/mmenu.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/chosen.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/slick.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/rangeslider.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/magnific-popup.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/waypoints.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/counterup.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/jquery-ui.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/tooltips.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "scripts/custom.js" %}"></script>
+    {% block js %}
+    {% endblock %}
+</div>
 </body>
 </html>
