--- a/libraries/templates/includes/pagination.html
+++ b/libraries/templates/includes/pagination.html
@@ -1,7 +1,6 @@
 {% if all_libraries.has_other_pages %}
     <div class="row fs-listings">
         <div class="col-md-12">
-
             <!-- Pagination -->
             <div class="clearfix"></div>
             <div class="row">
@@ -11,7 +10,7 @@
                         <nav class="pagination">
                             <ul>
                                 {% if all_libraries.has_previous %}
-                                    <li><a class="page-link" href="?page={{ all_libraries.previous_page_number }}">Previous</a>
+                                    <li><a class="page-link" href="?page={{ all_libraries.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Previous</a>
                                     </li>
                                 {% else %}
                                     <li class="page-item disabled">
@@ -29,25 +28,20 @@
                                         </li>
                                     {% else %}
                                         <li class="page-item">
-                                            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                                            <a class="page-link" href="?page={{ page_num }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ page_num }}</a>
                                         </li>
                                     {% endif %}
                                 {% endfor %}
 
                                 {% if all_libraries.has_next %}
                                     <li class="page-item">
-                                        <a class="page-link" href="?page={{ all_libraries.next_page_number }}">Next</a>
+                                        <a class="page-link" href="?page={{ all_libraries.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next</a>
                                     </li>
                                 {% else %}
                                     <li class="page-item disabled">
                                         <span class="page-link">Next</span>
                                     </li>
                                 {% endif %}
-
-                                {#                                <li><a href="#" class="current-page">1</a></li>#}
-                                {#                                <li><a href="#">2</a></li>#}
-                                {#                                <li><a href="#">3</a></li>#}
-                                {#                                <li><a href="#"><i class="sl sl-icon-arrow-right"></i></a></li>#}
                             </ul>
                         </nav>
                     </div>
